quality of life improvements commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:width="http://www.w3.org/1999/xhtml">
+<html lang="pt-br">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
     <title>Fulkaxó</title>
 
   </head>
-  <body>
+  <body id="fixsize">
 
     <header> <!-- Inicio cabecalho -->
       <nav class="navbar navbar-expand-md bg-claro">
