--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Fulkaxó</title>
 
   </head>
-  <body id="fixsize">
+  <body>
 
     <header> <!-- Inicio cabecalho -->
       <nav class="navbar navbar-expand-md bg-claro">
@@ -104,7 +104,7 @@
           <div class="col-md-6">
             <!-- Livro -->
             <span data-z data-z-depth="50px" id="livro">
-              <img width="50%" height="50%%" src="img/capa.png" alt="book cover" class="ms-5">
+              <img width="50%" height="50%" src="img/capa.png" alt="book cover" class="ms-5 border-white">
             </span>
 
           </div>
