layers corrected on the book data-z

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           </div>
           <div class="col-md-6">
             <!-- Livro -->
-            <span data-z data-z-depth="50px" id="livro">
-              <img width="50%" height="50%" src="img/capa.png" alt="book cover" class="ms-5 border-white">
+            <span data-z data-z-layers="20" data-z-depth="20px" id="livro">
+              <img width="50%" height="50%" src="img/capa.png" alt="book cover" class="ms-5 border-end">
             </span>
 
           </div>
