page Tchydjo(about the book) finished and improved

--- a/index.html
+++ b/index.html
@@ -282,27 +282,19 @@
       </div>
     </section> <!-- fim seção videos/maps -->
 
-    <footer class="mt-4 mb-4">
+    <footer class="pt-4 pb-4">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
-            <p>
-            <a href="index.html">Home</a>
-            <a href="livro.html">Link para p livro</a>
+          <div class="col-md-6">
 
-            </p>
+            <a href="index.html">Home</a>
+            <a href="livro.html">Link para o livro</a>
+
+
           </div>
-<!--          <div class="col-md-4 d-flex justify-content-end">-->
-<!--            <a href="#" class="text-secondary ms-2">-->
-<!--              <i class="fab fa-facebook-square fa-2x"></i>-->
-<!--            </a>-->
-<!--            <a href="#" class="text-secondary ms-2">-->
-<!--              <i class="fab fa-instagram-square fa-2x"></i>-->
-<!--            </a>-->
-<!--            <a href="#" class="text-secondary ms-2">-->
-<!--              <i class="fab fa-twitter-square fa-2x"></i>-->
-<!--            </a>-->
-<!--          </div>-->
+          <div class="col-md-6 justify-content-end mt-4 mt-md-0">
+            <a href="https://github.com/luhanBeal">© Copyright 2021 Fulkaxó by Luhan Beal</a>
+          </div>
         </div>
       </div>
     </footer>
