--- a/livro.html
+++ b/livro.html
@@ -10,8 +10,6 @@
     <!-- Style -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
-
-
     <title>Fulkaxó-Tchydjo</title>
 </head>
 <body>
@@ -65,16 +63,16 @@
 
     <section class=" backimg"> <!-- Início seção home -->
             <div class="container">
-
-
                 <div class="bg-claro pt-md-5 mb-4 text-center"> <!-- Início texto seção(flexbox) -->
                     <div class="row">
                         <div class="col-md-4 p-4 ps-md-5">
-                            <img src="img/portrait.jpg" id="portrait">
+                            <img src="img/image1026.png" id="portrait">
                         </div>
-                        <div class="col-md-8 align-self-center">
+                        <div class="col-md-7 align-self-center">
                             <h1>TCHYDJO UÊ</h1>
                         </div>
+
+                        <div class="col-md-1 green_bar"></div>
 
                             <p class="p-5">O cacique da aldeia fulkaxó. Chama-se Humberto Cruz,
                                 mas seu nome de batismo indígena é Tchydjo, que significa
@@ -83,24 +81,26 @@
                                 além de consultas individuais.
                                 Além do Brasil, promoveu sessões de cura na França,
                                 Alemanha, Inglaterra e Sibéria.</p>
-                            <hr>
+                        <div class="col-md-1 green_bar"></div>
                         <br>
                             <h5 class="p-5"> Este livro escrito por<strong> Rô Santanna </strong>conta os fatos e acontecimentos durante a sia infância e adolecência
                             onde o aprendizado da cultura Cariri firmou-se em seu espírito.</h5>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 align-self-center">
-                            <iframe type="text/html" width="200" height="350" allowfullscreen style="max-width:100%"
-                                    src="https://ler.amazon.com.br/kp/card?asin=B08T9QJ9ZT&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q" >
-                            </iframe>
-                        </div>
 
-                        <div class="col-md-6 mb-5">
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-1 green_bar"></div>
+                        <div class="col-md-6 align-self-center">
                             <h3>Preview do e-book</h3>
 
                             <p class="p-2">Você pode adquirir o e-book utilizando o link abaixo. </p>
                             <a href="https://www.amazon.com.br/dp/B08T9QJ9ZT?ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q&tag=kp014-20&linkCode=kpe"
                                class="btn btn-basic">Adquira o e-book</a>
+                        </div>
+                        <div class="col-md-5 align-self-center pb-4 pe-auto">
+                            <iframe type="text/html" width="200" height="350" allowfullscreen style="max-width:100%"
+                                    src="https://ler.amazon.com.br/kp/card?asin=B08T9QJ9ZT&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q" >
+                            </iframe>
                         </div>
                     </div>
 
