--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                 <a href="index.html" class="nav-link btn btn-header">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link btn btn-header">Ajude a aldeia</a>
+                <a href="ajude.html" class="nav-link btn btn-header">Ajude a aldeia</a>
               </li>
               <li class="nav-item">
                 <a href="livro.html" class="nav-link btn btn-header">Tchydjo</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link btn btn-header">A aldeia</a>
+                <a href="aldeia.html" class="nav-link btn btn-header">A aldeia</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.amazon.com.br/dp/B08T9QJ9ZT?ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q&tag=kp014-20&linkCode=kpe"
+                <a href="livro.html"
                    class="nav-link btn btn-header">O livro</a>
               </li>
             </ul>
@@ -200,18 +200,18 @@
 
               <div class="carousel-item active">
                 <div class="row">
-                <div class="col-md-4 ms-auto">
-                  <!-- funai -->
-                  <img src="img/funai/funai1.jpg" class="img-fluid">
+                  <div class="col-md-4 ms-auto">
+                    <!-- funai -->
+                    <img src="img/funai/funai1.jpg" class="img-fluid">
                   </div>
-                <div class="col-md-6 ">
-                  <div class="align-self-center">
-                    <!--Textos-->
-                    <h2>Encontro com a FUNAI na aldeia Fulkaxó</h2>
-                    <p>em frente a oca ...</p>
-                    <a href="" class="btn btn-basic">Veja mais</a>
+                  <div class="col-md-6 ">
+                    <div class="align-self-center">
+                      <!--Textos-->
+                      <h2>Encontro com a FUNAI na aldeia Fulkaxó</h2>
+                      <p></p>
+                      <a href="" class="btn btn-basic">Veja mais</a>
+                    </div>
                   </div>
-                </div>
                 </div> <!-- fim row -->
               </div>
               <div class="carousel-item">
@@ -223,7 +223,7 @@
                   <div class="col-md-6 ">
                     <div class="align-self-center">
                       <!--Textos-->
-                      <h2>Os cariri xocó e a aleia fulkaxó</h2>
+                      <h2>Os cariri xocó e a aldeia Fulkaxó</h2>
                       <p>pequena descrição ...</p>
                       <a href="" class="btn btn-basic">Leia mais</a>
                     </div>
@@ -234,7 +234,7 @@
                 <div class="row">
                   <div class="col-md-4 ms-auto">
                     <!-- Os cariri xocó  -->
-                    <img src="img/all.jpg" class="img-fluid bdd">
+                    <img src="img/all.jpg" class="img-fluid">
                   </div>
                   <div class="col-md-6 ">
                     <div class="align-self-center">
@@ -292,8 +292,8 @@
 
 
           </div>
-          <div class="col-md-6 justify-content-end mt-4 mt-md-0">
-            <a href="https://github.com/luhanBeal">© Copyright 2021 Fulkaxó by Luhan Beal</a>
+          <div class="col-lg-6 align-self-center mt-4 mt-md-0">
+            <a href="https://github.com/luhanBeal">© Copyright 2021 Fulkaxó by Luhan Beal Sant'Anna</a>
           </div>
         </div>
       </div>
