new pages included

--- a/funai.html
+++ b/funai.html
@@ -10,6 +10,8 @@
     <!-- Style -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
+    <link rel="icon" href="img/icon.png">
+
     <title>Fulkaxó</title>
 </head>
 <body>
@@ -66,49 +68,44 @@
         <div class="bg-claro pt-md-5 text-center"> <!-- Início texto seção(flexbox) -->
             <div class="row">
                 <div class="col-md-6 p-4 ps-md-5">
-                    <img src="img/all.png" id="portrait">
+                    <img src="img/funai/funai3.jpg" class="img-fluid">
                 </div>
                 <div class="col-md-5 align-self-center">
-                    <h1>Saiba como ajudar a aldeia</h1>
+                    <h1>ENCONTRO COM A FUNAI</h1>
                 </div>
                 <div class="col-md-1 green_bar"></div>
                 <p class="p-5">
-                    A aldeia Fulkaxó é uma mistura de três etnias: Kariri, Xocó e Fulni-ô. A
-                    aldeia está sendo construída no município de Pacatuba, no estado de
-                    Sergipe.
-                    Na aldeia não há energia elétrica, nem água. Foram construídas quatro ocas
-                    comuns, além de algumas moradias, tudo feito através de doações de
-                    pessoas de todo o Brasil que conhecem o cacique Tchydjo e são
-                    simpatizantes da causa Fulkaxó.
-                    Para colaborar com a aldeia, adquira o ebook “TCHYDJO – o espírito e a
-                    esperança Fulkaxó – parte 1” no link abaixo:</p>
-                <div>
-                    <a href="https://www.amazon.com.br/dp/B08T9QJ9ZT?ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q&tag=kp014-20&linkCode=kpe"
-                       class="btn btn-basic mb-4">Adquira o e-book</a>
-                </div>
+                    Na aldeia Fulkaxó, os moradores tiveram vários encontros com a FUNAI
+                    no intuito de adquirir em definitivo a posse das terras em nome dos
+                    Fulkaxó. O processo se arrasta há anos, mas com a colaboração do
+                    proprietário das terras e do governo federal o fim do processo parece estar
+                    próximo.
+                    Originalmente, a fazenda onde a aldeia se encontra era terra dos Kariri-
+                    Xocó. Com a invasão europeia, foram aos poucos sendo expulsos de seus
+                    lares, tendo de submeter-se ao colonialismo português e abandonando as
+                    suas crenças e meio de vida originais.
+                    A cessão das terras para os Fulkaxó é uma reparação histórica para este
+                    povo que foi praticamente exterminado pelo avanço da cultura ocidental.</p>
+                <hr />
                 <br>
             </div>
 
-            <div class="row pt-5">
-                <div class="col-md-1 green_bar"></div>
-                <div class="col-md-7 align-self-center p-3">
-                    <h3>Outras maneiras de ajudar: </h3>
-
-                    <p class="p-2">Para ajudar a construção e manutenção da aldeia Fulkaxó,
-                        doações podem ser feitas através da seguinte conta:</p>
-                    <ul class="border-basic list-unstyled">
-                        <li>Banco Bradesco - 237</li>
-                        <li>Agência: 3167-4</li>
-                        <li>Conta Poupança: 4017277-7</li>
-                        <li>Humberto Cruz – CPF nº 136166094/53</li>
-                    </ul>
-
+            <div class="row p-4">
+                <div class="col-md-4 pt-2">
+                    <img src="img/funai/funai1.jpg" class="img-fluid">
                 </div>
-                <div class="col-md-4 align-self-center p-3" >
-                    <h5>Adquira o livro físico:</h5>
-                    <a href="livro.html"
-                       class="btn btn-basic mb-4">Contatos</a>
+                <div class="col-md-4 pt-2">
+                    <img src="img/funai/funai2.jpg" class="img-fluid">
                 </div>
+                <div class="col-md-4 pt-2">
+                    <img src="img/funai/funai3.jpg" class="img-fluid">
+                </div>
+            </div>
+
+            <div class="align-self-center p-3">
+                <a href="ajude.html" class="btn btn-basic">
+                    <h3>Ajude a tribo</h3>
+                </a>
             </div>
 
         </div> <!-- Fim texto seção -->
