--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Style -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
-
+    <link rel="icon" href="img/icon.png">
 
     <title>Fulkaxó</title>
 
@@ -74,7 +74,7 @@
               <p class="mt-4 display-6 fst-italic">Uma nova etnia que surge na cidade de Pacatuba, SE.</p>
 
                   <div class="mt-4 mb-4">
-                    <button type="button" class="btn btn-basic">Saiba mais</button>
+                    <a href="livro.html" class="btn btn-basic">Saiba mais</a>
                   </div>
 
             </div>
@@ -194,7 +194,6 @@
     <section class="caixa bg-claro"> <!-- Início seção funai -->
       <div class="container">
 
-
           <div id="contr" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner"> <!-- Início Inner -->
 
@@ -209,7 +208,7 @@
                       <!--Textos-->
                       <h2>Encontro com a FUNAI na aldeia Fulkaxó</h2>
                       <p></p>
-                      <a href="" class="btn btn-basic">Veja mais</a>
+                      <a href="funai.html" class="btn btn-basic">Veja mais</a>
                     </div>
                   </div>
                 </div> <!-- fim row -->
@@ -225,7 +224,7 @@
                       <!--Textos-->
                       <h2>Os cariri xocó e a aldeia Fulkaxó</h2>
                       <p>pequena descrição ...</p>
-                      <a href="" class="btn btn-basic">Leia mais</a>
+                      <a href="aldeia.html" class="btn btn-basic me-auto">Leia mais</a>
                     </div>
                   </div>
                 </div> <!-- fim row -->
@@ -241,7 +240,7 @@
                       <!--Textos-->
                       <h2>Saiba como ajudar a aldeia</h2>
                       <p>pequena descrição ...</p>
-                      <a href="" class="btn btn-basic">Clique aqui</a>
+                      <a href="ajude.html" class="btn btn-basic">Clique aqui</a>
                     </div>
                   </div>
                 </div> <!-- fim row -->
@@ -298,6 +297,7 @@
         </div>
       </div>
     </footer>
+
 
        <!-- bootstrap -->
     <script src="js/bootstrap.bundle.min.js"></script>
