--- a/ajude.html
+++ b/ajude.html
@@ -10,6 +10,8 @@
     <!-- Style -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
+    <link rel="icon" href="img/icon.png">
+
     <title>Fulkaxó</title>
 </head>
 <body>
@@ -118,7 +120,6 @@
 
 </section> <!-- Fim seção home -->
 
-
 <footer class="pt-4 pb-4">
     <div class="container">
         <div class="row">
@@ -135,6 +136,7 @@
         </div>
     </div>
 </footer>
+
 
 <!-- bootstrap -->
 <script src="js/bootstrap.bundle.min.js"></script>
