--- a/livro.html
+++ b/livro.html
@@ -9,12 +9,15 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Style -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
+        <!--MyScript-->
+
+    <link rel="icon" href="img/icon.png">
 
     <title>Fulkaxó-Tchydjo</title>
 </head>
 <body>
 
-<header> <!-- Inicio cabecalho -->
+    <header> <!-- Inicio cabecalho -->
     <nav class="navbar navbar-expand-md bg-claro">
         <div class="container">
 
@@ -133,7 +136,6 @@
 
         </section> <!-- Fim seção home -->
 
-
     <footer class="pt-4 pb-4">
         <div class="container">
             <div class="row">
@@ -153,6 +155,7 @@
 
     <!-- bootstrap -->
     <script src="js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 </html>
