Página livro pronta, exceto barra de menu

--- a/livro.html
+++ b/livro.html
@@ -50,12 +50,20 @@
                            class="nav-link btn btn-header">O livro</a>
                     </li>
                 </ul>
-                <a href="index.html" class="text-secondary ms-3">
-                    <img src="img/icons/br.png" width="20px">
-                </a>
-                <a href="#" class="text-secondary ms-3">
-                    <img src="img/icons/uk.png" width="20px">
-                </a>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="index.html" class="text-secondary ms-3">
+                            <img src="img/icons/br.png" width="20px">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="text-secondary ms-3">
+                            <img src="img/icons/uk.png" width="20px">
+                        </a>
+                    </li>
+                </ul>
+
+
             </div>
 
         </div>
@@ -64,10 +72,10 @@
 
 </header> <!-- fim cabecalho -->
 
-    <section class=" backimg"> <!-- Início seção home -->
+    <section class="backimg"> <!-- Início seção home -->
             <div class="container">
                 <div class="bg-claro pt-md-5 text-center"> <!-- Início texto seção(flexbox) -->
-                    <div class="row">
+                    <div class="row pt-3 pb-5">
                         <div class="col-md-4 p-4 ps-md-5">
                             <img src="img/portrait.png" id="portrait">
                         </div>
@@ -77,56 +85,67 @@
 
                         <div class="col-md-1 green_bar"></div>
 
-                            <p class="p-5">O cacique da aldeia fulkaxó. Chama-se Humberto Cruz,
-                                mas seu nome de batismo indígena é Tchydjo, que significa
-                                “a força que vem do peixe”. Líder da aldeia e mestre curador,
-                                promove desde 1992 sessões de cura nativa através da pajelança,
-                                além de consultas individuais.
-                                Além do Brasil, promoveu sessões de cura na França,
-                                Alemanha, Inglaterra e Sibéria.</p>
-                        <hr />
+                        <p class="p-4"><strong>Humberto Cruz</strong> (Tchydjo Uê) é o cacique da aldeia Fulkaxó.
+                                Seu nome indígena significa “a força que vem do peixe”.
+                                Mestre curador e homem de medicina, promove - desde 1992 -
+                                sessões de cura  nativa e pajeanças, além de conceder consultas individuais.
+                                Já percorreu grande parte do Brasil e também promoveu sessões de cura na
+                                França, Alemanha, Inglaterra e Sibéria.</p>
+
                         <br>
-                            <h6 class="p-5"> Este livro escrito por<strong> Rô Santanna </strong>conta os fatos e acontecimentos durante a infância e adolecência
-                            do cacique, onde o aprendizado da cultura Cariri firmou-se em seu espírito.</h6>
+
+
+                    </div>
+                    <div class="m-2">
+                        <img src="img/back1.png" class="img-fluid">
+                        <h3 class=" p-4">Tchydjo - O espírito e a esperança Fulkaxó</h3>
+                        <p>1ª parte</p>
+                        <p class="p-3"> Este livro escrito por<strong> Rô Santanna </strong>conta os fatos e acontecimentos durante a infância e adolecência
+                            do cacique, onde o aprendizado da cultura Cariri firmou-se em seu espírito.</p>
+                        <img src="img/back2.png" class="img-fluid">
+                    </div>
+
+                    <h2 class="pt-4">LIVRO IMPRESSO</h2>
+
+                    <div class="row pb-5">
+                        <div class="col-md-1 green_bar"></div>
+                        <div class="col-md-7 align-self-center p-3 p-md-5">
+                            <p class="p-4">Para adquirir o livro impresso, entre em contato com os seguintes números
+                                do whatsapp:</p>
+                            <ul class="border-basic list-unstyled p-4">
+                                <li><strong>(51) 9952123951 – Rô Sant’Anna</strong></li>
+                                <li><strong>(51) 998348724 - Amarildo Barulho</strong></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4 align-self-center pe-4">
+                            <p class="p-4">Ou entre em contato pelo e-mail: </p>
+                            <p class="p-2 "><strong>contato@fulkaxo.com.br</strong></p>
+                        </div>
 
                     </div>
 
-                    <div class="row  pb-4">
-                        <div class="col-md-1 green_bar"></div>
-                        <div class="col-md-6 align-self-center">
-                            <h3>Preview do e-book</h3>
+                    <hr />
 
-                            <p class="p-2">Você pode adquirir o e-book utilizando o link abaixo. </p>
+                    <h2 class="pt-3">E-BOOK</h2>
+                    <div class="row  pb-md-5 pb-4">
+                        <div class="col-md-6 align-self-center">
+                            <h5 class="p-4">Você também pode adquirir o e-book utilizando o link abaixo.</h5>
+
+
                             <a href="https://www.amazon.com.br/dp/B08T9QJ9ZT?ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q&tag=kp014-20&linkCode=kpe"
                                class="btn btn-basic mb-4">Adquira o e-book</a>
                         </div>
-                        <div class="col-md-5 align-self-center pe-auto" >
+
+                        <div class="col-md-5 align-self-center pe-auto pb-5 pb-md-0" >
+                            <h5 class="pb-4 pt-5">Preview do e-book</h5>
                             <iframe type="text/html" width="200" height="350" allowfullscreen style="max-width:100%"
                                     src="https://ler.amazon.com.br/kp/card?asin=B08T9QJ9ZT&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_TCR4Q4WQ132220SC195Q"
                                     id="bookframe">
                             </iframe>
                         </div>
-                    </div>
 
-                    <hr />
-
-                    <div class="row pt-3 pb-5">
-                        <div class="col-md-7 align-self-center p-5 ">
-                            <h5 class="mb-4">Para adquirir o livro impresso, entre em contato com os seguintes números
-                                do whatsapp:</h5>
-                            <ul class="border-basic list-unstyled">
-                                <li>(51) 9952123951 – Rô Sant’Anna</li>
-                                <li>(51) 981176393 – Marisa Beal</li>
-                                <li>(54) 999747617 - Janete (Caxias/RS)</li>
-                                <li>(79) 999721679 – Luciane Pinto (Pacatuba/SE)</li>
-                                <li>(51) 998348724 - Amarildo</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-4 align-self-center pe-4">
-                            <h5 class="mb-2">Ou entre em contato pelo e-mail: </h5>
-                            <p class="p-2">Entre em contato pelo e-mail: <strong>contato@fulkaxo.com.br</strong></p>
-                        </div>
                         <div class="col-md-1 green_bar"></div>
+
                     </div>
 
                 </div> <!-- Fim texto seção -->
@@ -136,7 +155,7 @@
 
         </section> <!-- Fim seção home -->
 
-    <footer class="pt-4 pb-4">
+    <footer class=" pt-4 pb-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
